--- a/apps/site/src/views/Resources/sections/Landing/Landing.module.scss
+++ b/apps/site/src/views/Resources/sections/Landing/Landing.module.scss
@@ -17,7 +17,7 @@
 
 @include bootstrap.media-breakpoint-up(lg) {
 	.landing {
-		margin-top: 40vh;
-		margin-bottom: 40vh;
+		margin-top: 200px;
+		margin-bottom: 300px;
 	}
 }
